--- a/POSVTA4/REPORTE-CORTE-V1.2.html
+++ b/POSVTA4/REPORTE-CORTE-V1.2.html
@@ -189,7 +189,7 @@
           <td>${info.nombre}</td>
           <td>${info.cantidad}</td>
           <td>$${info.precioUnit.toFixed(2)}</td>
-          <td>$${info.total.toFixed(2())}</td>
+          <td>$${info.total.toFixed(2)}</td>
         `;
         tbody.appendChild(fila);
       }
